deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deploy
  labels:
    app: django-app
  namespace: django-todo-app
spec:
  replicas: 4
  selector: 
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-todo-ctr
          image: rahulraj28/react_django_app:latest
          ports:
            - containerPort: 8001
