pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-todo-pod
  namespace: django-todo-app
spec:
  containers:
    - name:  django-todo-ctr
      image: rahulraj28/react_django_app:latest
      ports:
        - containerPort: 8001
