Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-service
  namespace: django-todo-app
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8001
      protocol: TCP
